--- a/src/css/style.css
+++ b/src/css/style.css
@@ -88,11 +88,79 @@
 
 /* Global styles */
 
+* {
+  box-sizing: border-box;
+}
+img {
+  max-width: 100%;
+}
+
+body {
+  font-family: var(--bs-body-font-family);
+  font-size: 18px;
+  margin: 0 auto;
+  max-width: 1200px;
+}
+
+a:link,
+a:visited {
+  color: var(--bs-link-color);
+}
+
+a:hover {
+  color: var(--bs-link-hover-color);
+}
+
+/* Skip links styling */
+.skip-links ul {
+  list-style-type: none;
+  margin: 0;
+  padding-left: 0;
+}
+
+.skip-links a {
+  font-size: 11px;
+  font-size: 0.6875rem;
+  position: absolute;
+  right: 20px;
+  top: -200px;
+  z-index: -1;
+}
+
+.skip-links a:focus {
+  top: 2px;
+  z-index: 9999;
+}
+
+/* Title and logo styling */
+
+.site-title {
+  display: flex;
+  align-items: center;
+}
+.site-title > span {
+  font-size: 1rem;
+  margin-left: 0.3em;
+}
+
+.logo {
+  height: 0;
+  width: 0;
+  margin: 0.5em;
+  display: inline-block;
+  border-top: 34px solid var(--bs-light-green);
+  border-left: 13px solid transparent;
+  border-right: 13px solid transparent;
+}
+
+/* Global navbar styling */
+
 .global-header {
   background-color: var(--bs-black);
   color: white;
   display: flex;
   justify-content: space-between;
+  /* padding: 0.3em 1rem; */
   fill: white;
 }
 
@@ -121,12 +189,15 @@
   border: none;
   color: white;
   font-size: 1rem;
+
   padding: 1.2em;
   display: flex;
   align-items: center;
   text-transform: uppercase;
   border-left: 1px solid var(--bs-grey-5);
 }
+
+/* Park header */
 
 /* Hero banner */
 .hero-banner {
@@ -161,6 +232,7 @@
   flex-direction: column;
   font-size: 0.8rem;
 }
+
 /* Park nav styling */
 
 .park-nav > ul {
@@ -185,4 +257,95 @@
 .park-nav svg {
   width: 24px;
   height: 24px;
+}
+
+.intro {
+  padding: 1em;
+}
+
+.intro > h1 {
+  font-family: var(--bs-font-serif);
+  font-size: 2em;
+  font-weight: normal;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  padding: 1em;
+}
+
+.info > * {
+  flex: 1;
+}
+
+@media screen and (min-width: 630px) {
+  .info {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+  }
+}
+
+
+.media-card a {
+  text-decoration: none;
+  color: var(--bs-black);
+}
+
+.media-card a:hover {
+  color: var(--bs-crete);
+}
+.media-card h3 {
+  margin: 0.5rem 0;
+}
+.media-card > p {
+  font-size: 0.8em;
+  line-height: 1.5;
+  color: var(--bs-grey-2);
+}
+
+
+.park-footer {
+  background-image: url("../images/topo_pattern.png");
+  padding: 1.5rem;
+}
+
+.park-footer h3 {
+  font-family: var(--bs-font-serif);
+  text-transform: uppercase;
+  font-size: 0.8em;
+  margin-top: 0.5rem;
+}
+
+.park-footer h4 {
+  margin-top: 0.8rem;
+  margin-bottom: 0.5rem;
+  font-size: 0.8em;
+}
+
+.park-footer p {
+  font-size: 0.8em;
+  line-height: 1;
+  color: var(--bs-grey-2);
+  margin: 0.5rem 0;
+}
+
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.disclaimer {
+  padding: 0 1em;
 }
